--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.3",
     "body-parser": "~1.13.2",
+    "chalk": "^1.1.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
